Implement /getallactivities API #3 @8h
