# src/main/java/com/example/ethelon/model/ActivityCriteria.java
@@ -1,0 +1,15 @@
+package com.example.ethelon.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+
+/**
+ * ActivityCriteria model
+ * @author Kobe Kyle Relativo
+ */
+@Data
+@AllArgsConstructor
+public class ActivityCriteria {
+    private String activity_id;
+    private String criteria;
+}
